[project]
name = "homodgcat_wiki"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = ["monsterui", "polars", "python-fasthtml"]

[dependency-groups]
dev = ["ruff", "ty"]

[tool.ruff.lint]
ignore = [
  "F403", # undefined-local-with-import-star
  "F405", # undefined-local-with-import-star-usage
]
